2010-08-27  Kent Tamura  <tkent@chromium.org>

Reviewed by Pavel Feldman.

        [DRT/Chromium] Fix inspector test failures
        https://bugs.webkit.org/show_bug.cgi?id=44748

        * platform/chromium/drt_expectations.txt:
         Update expectations for the DRT change.
2010-08-27  Kent Tamura  <tkent@chromium.org>

        Reviewed by Pavel Feldman.

        [DRT/Chromium] Fix inspector test failures
        https://bugs.webkit.org/show_bug.cgi?id=44748

        * DEPS: Update Chromium revision to 57605 to have a webkit_support change.
2010-08-27  Kent Tamura  <tkent@chromium.org>

        Reviewed by Pavel Feldman.

        [DRT/Chromium] Fix inspector test failures
        https://bugs.webkit.org/show_bug.cgi?id=44748

        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        (DRTDevToolsAgent::createClientMessageLoop):
          Returns a valid WebKitClientMessageLoop instance
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:

Canonical link: https://commits.webkit.org/56966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66194 268f45cc-cd09-0410-ab3c-d52691b4dbfc